--- a/index.html
+++ b/index.html
@@ -16,88 +16,15 @@
     </div>
     <div class="main-content">
         <div class="container py-4">
-            <div class="row g-4">
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="my-card">
-                        <img src="img/pin.svg" class="pin"></img>
-                        <div class="img-container debug">
-                            <img src="./img/sample.jpg" alt="">
-                        </div>
-                        <div class="description debug">
-                            prova
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="my-card">
-                        <img src="img/pin.svg" class="pin"></img>
-                        <div class="img-container debug">
-                            <img src="./img/sample.jpg" alt="">
-                        </div>
-                        <div class="description debug">
-                            prova
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="my-card">
-                        <img src="img/pin.svg" class="pin"></img>
-                        <div class="img-container debug">
-                            <img src="./img/sample.jpg" alt="">
-                        </div>
-                        <div class="description debug">
-                            prova
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="my-card">
-                        <img src="img/pin.svg" class="pin"></img>
-                        <div class="img-container debug">
-                            <img src="./img/sample.jpg" alt="">
-                        </div>
-                        <div class="description debug">
-                            prova
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="my-card">
-                        <img src="img/pin.svg" class="pin"></img>
-                        <div class="img-container debug">
-                            <img src="./img/sample.jpg" alt="">
-                        </div>
-                        <div class="description debug">
-                            prova
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="my-card">
-                        <img src="img/pin.svg" class="pin"></img>
-                        <div class="img-container debug">
-                            <img src="./img/sample.jpg" alt="">
-                        </div>
-                        <div class="description debug">
-                            prova
-                        </div>
-                    </div>
-                </div>
-
+            <div class="row g-4" id="card-container">
             </div>
         </div>
     </div>
-    <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
