--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-    <div class="main-header py-2">
+    <div class="main-header py-2 sticky-top">
         <h1 class="text-center">Estate '24</h1>
     </div>
     <div class="main-content">
         <div class="container py-4">
             <div class="row g-4" id="card-container">
             </div>
+            <button id="regen" class="btn btn-primary mt-4">Rigenera</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
