--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <div class="main-header py-2 sticky-top">
+    <div class="selected-bg d-none">
+    </div>
+    <div class="main-header py-2">
         <h1 class="text-center">Estate '24</h1>
     </div>
     <div class="main-content">
@@ -21,6 +23,7 @@
             <button id="regen" class="btn btn-primary mt-4">Rigenera</button>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
