ADD close and overflow control

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-    <div class="selected-bg d-none">
+<body class="overflow-y-hidden">
+    <div id="selected-bg">
+        <button type="button" class="btn btn-outline-light" id="close">
+            X
+        </button>
     </div>
     <div class="main-header py-2">
         <h1 class="text-center">Estate '24</h1>
