--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             X
         </button>
     </div>
-    <div class="main-header py-2">
+    <div class="main-header py-2 sticky-top">
         <h1 class="text-center">Estate '24</h1>
     </div>
     <div class="main-content">
