ADD logic for each card

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body class="overflow-y-hidden">
-    <div id="selected-bg">
+<body>
+    <div id="selected-bg" class="d-none">
         <button type="button" class="btn btn-outline-light" id="close">
             X
         </button>
