--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="selected-bg" class="d-none">
+    <div id="overlay" class="d-none">
         <button type="button" class="btn btn-outline-light" id="close">
             X
         </button>
