--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <button type="button" class="btn btn-outline-light" id="close">
             X
         </button>
+        <div id="img-show">
+
+        </div>
     </div>
+
     <div class="main-header py-2 sticky-top">
         <h1 class="text-center">Estate '24</h1>
     </div>
