--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="main-content">
         <div class="container py-4">
-            <div class="row g-4" id="card-container">
+            <div class="row g-4 mt-2" id="card-container">
             </div>
             <button id="regen" class="btn btn-primary mt-4">Rigenera</button>
         </div>
