--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
 
         </div>
     </div>
-
-    <div class="main-header py-2 sticky-top">
-        <h1 class="text-center">Estate '24</h1>
-    </div>
-    <div class="main-content">
-        <div class="container py-4">
-            <div class="row g-4 mt-2" id="card-container">
-            </div>
-            <button id="regen" class="btn btn-primary mt-4">Rigenera</button>
+    <section class="content">
+        <div class="main-header py-2 sticky-top">
+            <h1 class="text-center">Estate '24</h1>
         </div>
-    </div>
+        <div class="main-content flex-grow-1">
+            <div class="container py-4">
+                <div class="row g-4 mt-2" id="card-container">
+                </div>
+                <button id="regen" class="btn btn-primary mt-4">Rigenera</button>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
