--- a/index.html
+++ b/index.html
@@ -25,11 +25,29 @@
 
         </div>
     </div>
+
     <section class="content">
         <div class="main-header py-2 sticky-top">
             <h1 class="text-center">Estate '24</h1>
         </div>
         <div class="main-content flex-grow-1">
+
+            <!-- FORM
+            <div class="container text-align-center">
+                <form class="row g-3">
+                    <div class="col-12">
+                        <p>Inserisci il numero di immagini che vuoi visualizzare</p>
+                    </div>
+                    <div class="col-auto">
+                        <label for="inputPassword2" class="visually-hidden">Password</label>
+                        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary mb-3">Genera</button>
+                    </div>
+                </form>
+            </div> -->
+
             <div class="container py-4">
                 <div class="row g-4 mt-2" id="card-container">
                 </div>
@@ -37,6 +55,8 @@
             </div>
         </div>
     </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
