ADD regen btn in header

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
     </div>
 
     <section class="content">
-        <div class="main-header py-2 sticky-top">
-            <h1 class="text-center">Estate '24</h1>
-        </div>
-        <div class="main-content flex-grow-1">
 
+        <div class="main-header py-2 sticky-top">
+            <div class="container header-container d-flex justify-content-center">
+                <h1>Estate '24</h1>
+                <button id="regen" class="btn btn-primary">Rigenera</button>
+            </div>
+        </div>
+
+        <div class="main-content flex-grow-1">
             <!-- FORM
             <div class="container text-align-center">
                 <form class="row g-3">
@@ -51,7 +55,6 @@
             <div class="container py-4">
                 <div class="row g-4 mt-2" id="card-container">
                 </div>
-                <button id="regen" class="btn btn-primary mt-4">Rigenera</button>
             </div>
         </div>
     </section>
