ADD fix to scrolling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="main-header py-2 sticky-top">
             <div class="container header-container d-flex justify-content-center">
                 <h1>Estate '24</h1>
-                <button id="regen" class="btn btn-primary">Rigenera</button>
+                <button id="regen" class="btn btn-primary d-none">Rigenera</button>
             </div>
         </div>
 
