--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+
+    <!-- overlay shown only when a pic is selected -->
     <div id="overlay" class="d-none">
         <button type="button" class="btn btn-outline-light" id="close">
             X
@@ -28,15 +30,16 @@
 
     <section class="content">
 
-        <div class="main-header py-2 sticky-top">
+        <header class="main-header py-2 sticky-top">
             <div class="container header-container d-flex justify-content-center">
                 <h1>Estate '24</h1>
                 <button id="regen" class="btn btn-primary d-none">Rigenera</button>
             </div>
-        </div>
+        </header>
 
         <div class="main-content flex-grow-1">
 
+            <!-- form to ask the number of the pic to generate, hidden after submit -->
             <div class="container rounded mt-4 py-3" id="form-container">
                 <form id="request-form">
                     <div class="mb-3 text-white">
@@ -48,14 +51,15 @@
                 </form>
             </div>
 
+            <!-- here will be shown the cards -->
             <div class="container py-4">
                 <div class="row g-4 mt-2" id="card-container">
                 </div>
             </div>
+
         </div>
+
     </section>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
