ADD min 0 in input

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="mb-3 text-white">
                         <label for="pics-to-show" class="form-label">Inserisci il numero di post da
                             visualizzare:</label>
-                        <input type="number" class="form-control" id="pics-to-show" placeholder="Digita qui...">
+                        <input type="number" class="form-control" id="pics-to-show" min=0 placeholder="Digita qui...">
                     </div>
                     <button type="submit" class="btn btn-primary" id="gen">OK</button>
                 </form>
