--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <section class="content">
+    <div class="content">
 
         <header class="main-header py-2 sticky-top">
             <div class="container header-container d-flex justify-content-center">
@@ -55,7 +55,7 @@
 
         </div>
 
-    </section>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
